# yole-private

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_en.md  package.json  pyproject.toml
.agents/: README.md
.github/workflows/: check.yml  promote-update-channel.yml  release.yml
bridge/: handlers.py  ipc.py  workbench_bridge.py
bridge/tests/: test_e2e.py  test_handlers.py  test_ipc.py
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_test.rs  m1_writes.rs
core/: Cargo.toml  build.rs  tauri.conf.json
core/capabilities/: default.json
core/experiments/bridge-owner/: README.md  main.rs  registry.rs  results.md  tests.sh
core/experiments/tray-mode/: Cargo.toml  README.md  index.html  results.md  tauri.conf.json
core/experiments/tray-mode/src/: main.rs
core/icons/: icon.icns
core/installer/: nsis-hooks.nsh
core/migrations/: 001_init.sql  002_add_has_unread.sql  003_add_message_summary.sql  004_add_messages_fts.sql  005_add_message_preamble.sql  006_messages_origin.sql  007_sessions_origin.sql  008_runtime_identity.sql  009_managed_models.sql  011_managed_model_sort_order.sql  012_managed_model_local_secrets.sql  013_session_llm_key.sql
core/src/: api.rs  app_paths.rs  app_update.rs  browser_control.rs  codex_oauth.rs  conversation_image.rs  credential_store.rs  db.rs  discovery.rs  error.rs  im_supervisor.rs  ipc.rs  lib.rs  main.rs  managed_model_config.rs  managed_model_probe.rs  managed_prompt.rs  managed_runtime.rs  migration_backup.rs  path_install.rs  process_command.rs  runner_commands.rs  socket_listener.rs  sop_install.rs  yole_provisioning.rs
core/src/api/: health.rs  message.rs  model.rs  origin.rs  project.rs  search.rs  session.rs  status.rs
core/src/runner_manager/: error.rs  mod.rs  process.rs
core/tests/: db_test.rs  db_writes_test.rs  runner_manager_test.rs  socket_listener_test.rs
desktop/: .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
desktop/src/: App.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/experiments/bridge-owner/: README.md  main.rs  results.md
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_init.sql  002_add_has_unread.sql
desktop/src-tauri/src/: lib.rs
docs/: DESIGN.md  PRD.md  README.md  agent-api.md  architecture-demo.md  architecture.md  copy-austerity-principles.md  copy-language-guidelines.md  demand-pool.md  desktop-runtime.md  engineering-workflow.md  english-copy-draft.md  ga-baseline.md  ipc-protocol.md  managed-ga-runtime.md  project-status.md  release-update-sop.md  release-workflow.md  repository-and-release-topology.md  windows-build-checklist.md  yole-newapi-setup.md
docs/design-handoff/: README.md
docs/devlog/: 2026-05-07-design-direction-pivot.md  2026-05-07-stage1-bridge-poc-complete.md  2026-05-08-design-trio-finale.md  2026-05-08-onboarding-and-llm-switching.md  2026-05-08-stage2-desktop-skeleton-complete.md  2026-05-09-project-model-coding-agent.md  2026-05-09-yolo-mode.md  2026-05-11-stage3-multi-session-and-perf.md  2026-05-11-stage3-v0.1-completion.md  2026-05-12-dogfood-polish-marathon.md  2026-05-13-baseline-regression-and-feature-detection.md  2026-05-13-ga-baseline-upgrade-cf65515-to-6bb3104.md  2026-05-13-llm-warmup-bridge.md  2026-05-13-project-cwd-copy-and-live-sync-deferred.md  2026-05-13-sidebar-overhaul-and-projects.md  2026-05-13-ui-copy-i18n-and-brand-sweep.md  2026-05-13-v0.2-ai-session-rename.md  2026-05-13-v0.2-idle-autonomy.md  2026-05-13-v0.2-side-question-branch-rewind.md  2026-05-13-yole-rename-and-features-marathon.md  2026-05-14-conversation-streaming-and-btw-marathon.md  2026-05-14-project-rootpath-rollback-ga-memory-coupling.md  2026-05-15-ga-baseline-upgrade-6bb3104-to-fc6b5ad.md  2026-05-15-onboarding-empty-state-yolo-button-polish.md  2026-05-15-release-ci-menubar-icon-screenshots.md  2026-05-15-v0.1-alpha.2-windows-attach-fixes.md  2026-05-15-v0.1-prod-dogfood-fixes.md  2026-05-15-v0.1-ship-and-ci-fallback.md  2026-05-15-vision-pivot-to-orchestrator.md  2026-05-15-win-prep-y-plan-custom-chrome.md  2026-05-18-b1-rust-core-complete.md  2026-05-18-ga-baseline-upgrade-fc6b5ad-to-b063518.md  2026-05-18-prototype-go-for-b1.md  2026-05-18-v0.1.1-bundled-python.md  2026-05-19-b2-bridge-ownership-complete.md  2026-05-19-b3-m1-design-complete.md  2026-05-19-b3-m3-complete.md  2026-05-19-b3-m4-complete.md  2026-05-19-b3-m5-complete.md  2026-05-19-b3-prereq-relaxation.md  (+45 more)
docs/integrations/: galley-supervisor-sop.md  yole-supervisor-sop.md
docs/refactor/: B1-rust-core.md  B2-bridge-ownership.md  B3-M3-sub-plan.md  B3-M4-sub-plan.md  B3-M5-sub-plan.md  B3-M6-sub-plan.md  B3-store-slice.md  B4-M1-sub-plan.md  B4-M8-sub-plan.md  B4-M9-sub-plan.md  B4-cli-bg-artifact.md  README.md  b3-rust-emit-catalogue.md  b3-slice-adr.md  b3-slice-mapping.md  dogfood-scenarios.md  invariants.md  perf-baseline.md
gui/: README.md  index.html  package.json
gui/src/: App.tsx
managed-ga/: manifest.json
managed-ga/code/: .gitignore  README.md  TMWebDriver.py  agentmain.py  ga.py  llmcore.py  pyproject.toml
managed-ga/galley-prompts/: runtime-v1.md
managed-ga/patches/: 0001-managed-state-root.patch  0002-repair-windows-path-tool-json.patch  0003-normalize-asset-path-joins.patch  0004-managed-wechat-state-paths.patch  manifest.md  (+5 more)
provisioner/: .dockerignore  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  go.mod
runner/: __init__.py  handlers.py  ipc.py  managed_im_supervisor.py  managed_runtime.py  workbench_bridge.py  yole_bridge.py
scripts/: build-managed-ga.sh  bundle-python.sh  check-bundled-python-managed-ga.sh  check-managed-ga-app-bundle.mjs  check-managed-ga-payload.mjs  check-managed-ga-replay.mjs  check-update-channel.mjs  generate-tauri-update-manifest.mjs  generate-windows-update-manifest.mjs  perf-yole.py  prepare-cli-sidecar.mjs  prepare-cli-sidecar.sh  prepare-officecli.mjs  rebuild-nsis-default-passive.mjs  rename-artifact.sh
(+231 files in other folders)
