[project]
name = "yole-bridge"
version = "0.1.0"
description = "Yole bridge: JSON Lines IPC between GenericAgent subprocesses and the desktop frontend."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["runner*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["runner.tests.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# GA is an external project without type stubs. We treat its modules as
# opaque (Any) and rely on our own tests to catch interface drift.
module = ["agent_loop", "ga", "agentmain"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["runner/tests"]
python_files = "test_*.py"
addopts = "-v -m \"not e2e\""
markers = [
    "e2e: end-to-end tests that spawn a real bridge subprocess and call real LLM (run with `pytest -m e2e`)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# ipc.py uses camelCase field names to match the JSON wire format directly
# (see docs/ipc-protocol.md). This avoids name remapping at serialization time.
"runner/ipc.py" = ["N815"]
