# Workspace root for the Galley Rust side. Members:
#   - .       (this crate, the Tauri app — `galley-core`)
#   - ../cli  (the `galley-cli` binary, used by agents)
# Workspace root being at `core/` (not the repo root) keeps `target/` under
# `core/target/` so the existing CI cache key + tauri build paths are
# unaffected by the B1 layout change. Cli's discovery hint lives in
# `../cli/Cargo.toml` via `[package].workspace = "../core"`.
[workspace]
members = [".", "../cli"]

[package]
name = "galley-core"
version = "0.1.1-alpha.1"
description = "Galley Core — Rust authority layer (Tauri app + business logic)"
authors = ["JC <wangjc683@github>"]
edition = "2021"
# Two `[[bin]]` exist (`galley-core` + `bridge-owner-experiment`). The
# second is gated by `required-features = ["experiments"]` and shouldn't
# conflict, but `cargo run` (invoked by Tauri's DevCommand without a
# `--bin` flag) errored `could not determine which binary to run` after
# the B1 directory move. `default-run` makes the dev / build path
# unambiguous.
default-run = "galley-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the
# lib name unique so it doesn't conflict with the bin name. Only an issue
# on Windows — see https://github.com/rust-lang/cargo/issues/8519.
name = "galley_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Galley Core API (B1 M2+): async trait methods.
async-trait = "0.1"

# Experiment-only deps: throwaway bridge-owner prototype (Prototype phase of
# Galley Core refactor). Gated behind `experiments` feature so production
# build never pulls these. See experiments/bridge-owner/README.md.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "time", "net", "fs"], optional = true }
anyhow = { version = "1", optional = true }

[features]
# Enables the bridge-owner-experiment binary. Not part of any default set.
# Use: `cargo build --features experiments --bin bridge-owner-experiment`.
experiments = ["dep:tokio", "dep:anyhow"]

# Windows-only: restore drop shadow when we run with native decorations off
# (Galley's TopBar acts as custom chrome on Win; see lib.rs setup hook).
# Mac builds never fetch or compile this crate.
[target.'cfg(target_os = "windows")'.dependencies]
window-shadows-v2 = "0.1"

# Throwaway prototype binary. Validates Rust-owned Python subprocess equivalence
# vs current TS ownership. Required for B1 go/no-go (see refactor cursor).
[[bin]]
name = "bridge-owner-experiment"
path = "experiments/bridge-owner/main.rs"
required-features = ["experiments"]
