# Workspace root for the Galley Rust side. Members:
#   - .       (this crate, the Tauri app — `galley-core`)
#   - ../cli  (the `galley-cli` binary, used by agents)
# Workspace root being at `core/` (not the repo root) keeps `target/` under
# `core/target/` so the existing CI cache key + tauri build paths are
# unaffected by the B1 layout change. Cli's discovery hint lives in
# `../cli/Cargo.toml` via `[package].workspace = "../core"`.
[workspace]
members = [".", "../cli"]

[package]
name = "galley-core"
version = "0.2.0-alpha.2"
description = "Galley Core — Rust authority layer (Tauri app + business logic)"
authors = ["JC <wangjc683@github>"]
edition = "2021"
# Two `[[bin]]` exist (`galley-core` + `bridge-owner-experiment`). The
# second is gated by `required-features = ["experiments"]` and shouldn't
# conflict, but `cargo run` (invoked by Tauri's DevCommand without a
# `--bin` flag) errored `could not determine which binary to run` after
# the B1 directory move. `default-run` makes the dev / build path
# unambiguous.
default-run = "galley-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the
# lib name unique so it doesn't conflict with the bin name. Only an issue
# on Windows — see https://github.com/rust-lang/cargo/issues/8519.
name = "galley_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Test-only deps.
#
# `tokio` was moved to `[dependencies]` for production runner_manager use
# (B2 M1); the dev-dep entry is gone — tests inherit the same feature set
# the lib uses.
#
# `tempfile` is used by runner_manager_test.rs (mock runner Python script
# written to a tempdir) and is the same dep `cli/tests/cli_test.rs` uses.
[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Galley Core API (B1 M2+): async trait methods.
async-trait = "0.1"

# SQLite reads for `SqliteGalley` (B1 M3+). Version pinned to the same
# sqlx that `tauri-plugin-sql 2.4.0` already pulls in transitively, so
# both stacks share one `libsqlite3-sys 0.30.x` binding and one set of
# SQLite-compiled symbols. Runtime tied to tokio (Tauri's executor).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# Platform-specific config directory lookup for CLI processes that
# don't have a Tauri context. `tauri-plugin-sql` resolves
# `sqlite:workbench.db` against Tauri's app config dir, so the CLI must
# mirror that resolver exactly; see `app_paths.rs`.
directories = "5"

# UTC timestamps for migration backup directory names (B4 M8). Already in
# the dep tree transitively via sqlx, so this declaration is zero net-new
# crate cost. `default-features = false` drops time-zone + serde + clock
# subfeatures we don't need — only `now()` + `format()` for the compact
# YYYYMMDDTHHMMSSZ filename pattern. See migration_backup.rs.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Tokio is a production dep (RunnerManager owns Python runner subprocesses
# from B2 M1 onward — see runner_manager.rs). The feature set is the union
# of what RunnerManager needs (process, sync, io-util, time, macros,
# rt-multi-thread) and what the prototype binary still references
# (net + fs). Prototype binary stays gated behind the `experiments`
# feature, but its tokio dep is the same crate as production's, so no
# duplicate compile + no feature flag drift.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "time", "net", "fs"] }

# Experiment-only deps that aren't part of the production runner_manager
# code path. Currently just `anyhow` (prototype uses anyhow::Result;
# production code uses hand-rolled error enums per GalleyError convention).
anyhow = { version = "1", optional = true }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Unsigned beta managed model API keys live in Galley's SQLite DB as
# encrypted local payloads. Signed builds can add a system credential-store
# backend later without changing the public Provider/Model API.
ring = "0.17"

# Managed model setup probes provider endpoints from Rust so saved secrets do
# not need to round-trip through GUI state.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# Enables the bridge-owner-experiment binary. Not part of any default set.
# Use: `cargo build --features experiments --bin bridge-owner-experiment`.
experiments = ["dep:anyhow"]

# Windows-only: restore drop shadow when we run with native decorations off
# (Galley's TopBar acts as custom chrome on Win; see lib.rs setup hook).
# Mac builds never fetch or compile this crate.
[target.'cfg(target_os = "windows")'.dependencies]
window-shadows-v2 = "0.1"

# Throwaway prototype binary. Validates Rust-owned Python subprocess equivalence
# vs current TS ownership. Required for B1 go/no-go (see refactor cursor).
[[bin]]
name = "bridge-owner-experiment"
path = "experiments/bridge-owner/main.rs"
required-features = ["experiments"]
