# Standalone Tauri spike for B4 M2 tray + background mode validation.
#
# **Why standalone workspace** (not a member of core/'s workspace):
# core/Cargo.toml's `[workspace] members = [".", "../cli"]` doesn't auto-
# include subdirs, but adding this experiment as a member would force
# dependency unification (e.g. tauri version, objc2 feature flags) on the
# production crate. By declaring `[workspace]` here, this dir becomes its
# own workspace root — Cargo won't walk up past this point. Production
# builds (`cargo build` from core/) never see this crate.
#
# **Different identifier** (`app.yole.m2spike`): isolates app-data dir
# from production `app.yole` per AGENTS.md "Tauri Identifier Is Data-Critical"
# discipline — we don't want spike runs to land near user dogfood data.
#
# **Throwaway**: per spike convention (B4 M2 prereq), this binary doesn't
# graduate into production. If validation passes, the load-bearing pieces
# (close-handler shape, App Nap defeat helper, tray menu structure) get
# transcribed into `core/src/lib.rs` setup hook; this dir gets deleted in
# M2's closeout commit.
[workspace]

[package]
name = "tray-mode-spike"
version = "0.0.1"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

# App Nap defeat (T17-T19) intentionally pulled OUT of this spike — it
# was triggering pathological codegen (>10min) and likely the suspected
# linker error from prior attempts (Foundation framework link). The 4
# main validations (T1-T12 tray / hide / show / quit) work without it.
# App Nap behaviour can be observed externally via Activity Monitor's
# Energy Impact column; the in-code defeat helper graduates separately
# once we know the primary path holds.
